--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,63 @@
-.App {
+/* _________________________________navbar_______________________________ */
+.navbar {
+  background-color:#124B68 ;
+  padding: 0 !important;
+}
+.navbar-nav{
+  margin: auto;
+}
+.nav-link{
+  color: #ffffff !important;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+/* ________________________________register and login div______________________ */
+.registerAndLogin {
+  padding-right:24px ;
+  color:#124B68 ;
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(168,166,162));
+  font-weight: 450;
+  font-size: 12pt;
+width: 100%;
+float: left;
+}
+.registerAndLogin p {
+  margin: 0;
+  margin-left:20px;
+  margin-bottom: 2px;
+  display: inline;
+float: right;
+}
+
+/* ________________________carousel______________________ */
+.carousel {
+  height: 100%;
+}
+.top-right{
+  position: absolute;
+  top: 8px;
+  right: 0;
+  left: 50%;
+  bottom: 20px;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+/* section 2 left panel _________________________________________________ */
+
+.bg-section2{
+  background: #a8a6a2;
+  height: 100%;
+
+}
+.left-panel{
+  margin: 100px;
+  width: 400px;
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #09d3ac;
-}
+
