--- a/src/App.css
+++ b/src/App.css
@@ -45,19 +45,59 @@ float: right;
   color: #fff;
   text-align: center;
 }
+.carousel img {
+  width: 100%;
+  height: 100vh;
+}
 
 /* section 2 left panel _________________________________________________ */
 
 .bg-section2{
   background: #a8a6a2;
-  height: 100%;
-
+  /* height: 100vh; */
+  /* padding: 0.1rem 0; */
+  padding: 1px;
+  vertical-align: middle;
 }
 .left-panel{
   margin: 100px;
   width: 400px;
   height: auto;
 }
-
-
+/* SECTION 3__________________________________________ */
+.services{
+  background-image: url(./images/ImageTemp2.jpg);
+  background-color: transparent;
+    background-size: cover;
+    background-repeat: repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    text-align: center;
+}
+.services-center {
+  margin: 0 auto;
+  display: inline; 
+}
+.services span img{
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+}
+.services p{
+  width: 300px;
+  margin: auto;
+  background-color: rgba(255,255,255,.3);
+}
+.services h6{
+  background-color: rgba(255,255,255,.3);
+  margin: 0;
+}
+.services-shadow-bg {
+  background-color: rgba(255,255,255,.3);
+    /* border-radius: 20px; */
+    padding: 20px 40px;
+    width: fit-content;
+    display: inline-block;
+    margin: 100px 0;
+}
 
